TSK-1957: extend getUser() method with domain information
- extended WorkbasketQuery methods 'accessIdsHavePermission' & 'callerHasPermission' to accept multiple permissions
- added domain attribute to User API
- extended UserService to aggregate domain information

Co-authored-by: Mustapha Zorgati <15628173+mustaphazorgati@users.noreply.github.com>